@@ -100,7 +100,7 @@ LEXCFLAGS = -O
 
 
 OBJS = spim-utils.o run.o mem.o inst.o data.o sym-tbl.o y.tab.o lex.yy.o \
-       mips-syscall.o display-utils.o
+       syscall.o display-utils.o
 
 
 ENDIAN=`cat configuration`
@@ -185,11 +185,11 @@ very-clean: clean
 	rm -f y.tab.h y.tab.c lex.yy.c spim.tar* Documentation/spim.ps
 
 splint:
-	splint -weak -preproc -warnposix data.c display-utils.c inst.c mem.c mips-syscall.c run.c spim-utils.c spim.c sym-tbl.c y.tab.c lex.yy.c
+	splint -weak -preproc -warnposix data.c display-utils.c inst.c mem.c syscall.c run.c spim-utils.c spim.c sym-tbl.c y.tab.c lex.yy.c
 
 
 SRC = spim-utils.c run.c mem.c inst.c data.c sym-tbl.c y.tab.o lex.yy.o \
-      mips-syscall.c
+      syscall.c
 
 
 #
@@ -249,13 +249,12 @@ mem.o: spim-utils.h
 mem.o: inst.h
 mem.o: mem.h
 mem.o: reg.h
-mips-syscall.o: spim.h
-mips-syscall.o: inst.h
-mips-syscall.o: mem.h
-mips-syscall.o: reg.h
-mips-syscall.o: sym-tbl.h
-mips-syscall.o: spim-syscall.h
-mips-syscall.o: mips-syscall.h
+syscall.o: spim.h
+syscall.o: inst.h
+syscall.o: reg.h
+syscall.o: mem.h
+syscall.o: sym-tbl.h
+syscall.o: syscall.h
 run.o: spim.h
 run.o: spim-utils.h
 run.o: inst.h
@@ -263,7 +262,7 @@ run.o: mem.h
 run.o: reg.h
 run.o: sym-tbl.h
 run.o: y.tab.h
-run.o: mips-syscall.h
+run.o: syscall.h
 run.o: run.h
 spim-utils.o: spim.h
 spim-utils.o: spim-utils.h
